[gd_scene load_steps=37 format=3 uid="uid://b1vs14hoby88p"]

[ext_resource type="FontFile" uid="uid://be6q8glejura1" path="res://fonts/x12y16pxLineLinker.ttf" id="1_7648f"]
[ext_resource type="Script" path="res://result.gd" id="1_y1csj"]
[ext_resource type="Script" path="res://ResultScoreLabel.gd" id="2_e6f2i"]
[ext_resource type="Script" path="res://ResultScoreControl.gd" id="2_jg1mu"]
[ext_resource type="Script" path="res://HBoxResultStarContainer.gd" id="4_8lcck"]
[ext_resource type="PackedScene" uid="uid://yf4ayqyctu1o" path="res://result_star.tscn" id="6_h2coq"]
[ext_resource type="Script" path="res://RetryLabel.gd" id="7_3bh2k"]
[ext_resource type="AudioStream" uid="uid://dkdqi414i72y8" path="res://sounds/shoot.mp3" id="7_gcimh"]
[ext_resource type="Texture2D" uid="uid://mcamx3kdx0p2" path="res://textures/character.png" id="8_kig02"]
[ext_resource type="AudioStream" uid="uid://bjt1s4dkf3uba" path="res://sounds/graze.mp3" id="8_ow63p"]
[ext_resource type="AudioStream" uid="uid://bd2eor22h5quc" path="res://sounds/result.mp3" id="9_qbveu"]
[ext_resource type="Script" path="res://ResultCharacterAnimatedSprite2D.gd" id="9_vngku"]
[ext_resource type="AudioStream" uid="uid://cjlwqqmbehrka" path="res://sounds/start.mp3" id="13_d7qoq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nr0tf"]
atlas = ExtResource("8_kig02")
region = Rect2(864, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_iojai"]
atlas = ExtResource("8_kig02")
region = Rect2(912, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2n7a"]
atlas = ExtResource("8_kig02")
region = Rect2(960, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_awqan"]
atlas = ExtResource("8_kig02")
region = Rect2(1008, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft2p5"]
atlas = ExtResource("8_kig02")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jeeng"]
atlas = ExtResource("8_kig02")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndv58"]
atlas = ExtResource("8_kig02")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4pmvs"]
atlas = ExtResource("8_kig02")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp4ls"]
atlas = ExtResource("8_kig02")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lvk5"]
atlas = ExtResource("8_kig02")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxdrx"]
atlas = ExtResource("8_kig02")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mii2"]
atlas = ExtResource("8_kig02")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr4vw"]
atlas = ExtResource("8_kig02")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_not45"]
atlas = ExtResource("8_kig02")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4nwp"]
atlas = ExtResource("8_kig02")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpn85"]
atlas = ExtResource("8_kig02")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngw4j"]
atlas = ExtResource("8_kig02")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv0yw"]
atlas = ExtResource("8_kig02")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_uetxw"]
atlas = ExtResource("8_kig02")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv6bo"]
atlas = ExtResource("8_kig02")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvhki"]
atlas = ExtResource("8_kig02")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_cabyh"]
atlas = ExtResource("8_kig02")
region = Rect2(816, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_4nd8k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr0tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iojai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2n7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awqan")
}],
"loop": true,
"name": &"dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft2p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jeeng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndv58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4pmvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp4ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lvk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxdrx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mii2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr4vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_not45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4nwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpn85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngw4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv0yw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uetxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv6bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvhki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cabyh")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Result" type="Node2D"]
script = ExtResource("1_y1csj")

[node name="ResultUI" type="CanvasLayer" parent="."]

[node name="ResultScoreControl" type="Control" parent="ResultUI"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jg1mu")

[node name="ResultScoreLabel" type="Label" parent="ResultUI/ResultScoreControl"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_7648f")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_e6f2i")

[node name="HBoxResultStarContainer" type="HBoxContainer" parent="ResultUI/ResultScoreControl"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -24.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("4_8lcck")
result_star = ExtResource("6_h2coq")

[node name="ShootSE" type="AudioStreamPlayer2D" parent="ResultUI/ResultScoreControl/HBoxResultStarContainer"]
stream = ExtResource("7_gcimh")

[node name="GrazeSE" type="AudioStreamPlayer2D" parent="ResultUI/ResultScoreControl/HBoxResultStarContainer"]
stream = ExtResource("8_ow63p")

[node name="PaintBackColorRect" type="ColorRect" parent="ResultUI/ResultScoreControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.764706, 0.337255, 0.360784, 1)

[node name="PaintFrontColorRect" type="ColorRect" parent="ResultUI/ResultScoreControl"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -10.0
offset_right = 50.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.984314, 0.94902, 0.211765, 1)

[node name="ResultSE" type="AudioStreamPlayer2D" parent="ResultUI/ResultScoreControl"]
stream = ExtResource("9_qbveu")

[node name="RetryLabel" type="Label" parent="ResultUI"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 44.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_7648f")
text = "RETRY CLICK"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_3bh2k")

[node name="GameRetryTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ResultCharacterAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(68, 120)
sprite_frames = SubResource("SpriteFrames_4nd8k")
autoplay = "default"
script = ExtResource("9_vngku")

[node name="StartSE" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_d7qoq")

[connection signal="timeout" from="GameRetryTimer" to="." method="_on_game_retry_timer_timeout"]
